lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__decode_reasoning_content_as_thinking.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
{
  "id": "chatcmpl_test",
  "model": "test-model",
  "provider": "openai-compatible",
  "message": {
    "role": "assistant",
    "content": [
      {
        "kind": "thinking",
        "data": {
          "text": "The user wants 2+2.",
          "signature": null,
          "redacted": false
        }
      },
      {
        "kind": "text",
        "data": "4."
      }
    ],
    "name": null,
    "tool_call_id": null
  },
  "finish_reason": "stop",
  "usage": {
    "input_tokens": 25,
    "output_tokens": 40,
    "reasoning_tokens": 0,
    "cache_read_tokens": 0,
    "cache_write_tokens": 0
  },
  "raw": {
    "id": "chatcmpl_test",
    "object": "chat.completion",
    "created": 1700000000,
    "model": "test-model",
    "choices": [
      {
        "index": 0,
        "message": {
          "role": "assistant",
          "content": "4.",
          "reasoning_content": "The user wants 2+2."
        },
        "finish_reason": "stop"
      }
    ],
    "usage": {
      "prompt_tokens": 25,
      "completion_tokens": 40,
      "total_tokens": 65
    }
  },
  "warnings": [],
  "rate_limit": null
}
